2014-04-27  Karl Berry  <karl@gnu.org>

	* util/texi2dvi (max_iters): change from -1 to 7.  Infinite
	loops are bad.  Report from Marius Hofert, 25 Apr 2014 08:10:44.

2014-04-26  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/file-nodes.sh, info/t/dir-file-node.sh: New tests.
	* info/Makefile.am: Add new tests.

	* info/t/index-long-nodeline.sh, t/index.sh, t/split-index.sh:
	Make "#!/bin/sh" first line.

	* info/dir.c: Call dir node "Top".

2014-04-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/dir.c (build_dir_node): Use header text from
	util/dir-example.

	* info/man.c (reference_section_starters, frs_binding)
	(find_reference_section): Disable with preprocessor.
	(xrefs_of_manpage): Look in whole man page for possible xrefs.
	Work even if name of reference is surrounded by ECMA-48 SGR
	sequences.

2014-04-24  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info.h [HANDLE_MAN_PAGES]: #define removed.  All
	usages updated.

	* info/man.c (get_manpage_node): Use correct variable.

	* info/nodes.c (info_load_file, get_node_length): Declared static.

	* info/session.c (nearest_xref): Unused function deleted.

	* info/dir.c (maybe_create_dir_node, dir_node, create_dir_buffer)
	(build_dir_node): maybe_create_dir_node split up and behaviour
	changed.
	(dir_buffer): New file-level variable.
	(insert_text_into_fb_at_binding, insert_text_into_node): Renamed
	and arguments changed.
	(add_menu_to_file_buffer, add_menu_to_node): Renamed and arguments
	changed.
	* info/nodes.c (info_find_file_internal): Special treatment of
	dir file buffers removed.
	(info_get_node_with_defaults): Call dir_node to get dir node.

2014-04-23  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info-utils.c (info_parse_node): Don't use saven_filename
	or saven_nodename.
	(parsed_filename_size, parsed_nodename_size)
	(save_filename, saven_filename, save_nodename, saven_nodename)
	(save_string, saven_string): Functions and variables deleted.
