@@ -92,13 +92,16 @@ TESTS = \
 	t/file.sh \
 	t/file-node.sh \
 	t/file-nodes.sh \
+	t/no-file.sh \
 	t/dir.sh \
-	t/dir-to-file.sh \
-	t/dir-to-no-file.sh \
+	t/dir-file.sh \
+	t/dir-nondir.sh \
+	t/dir-no-file.sh \
 	t/dir-file-menu.sh \
 	t/dir-file-no-menu.sh \
 	t/dir-file-node.sh \
 	t/dir-3-menus.sh \
+	t/where-dir-file.sh \
 	t/tab.sh \
 	t/index.sh \
 	t/split-index.sh \
