@@ -1,0 +1,26 @@
+#!/bin/sh
+# Copyright (C) 2014 Free Software Foundation, Inc.
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 3, or (at your option)
+# any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+. t/Init-test.inc
+
+# Look for a non-existent entry in dir
+
+# Note that the behaviour is different running non-interatively
+# (with --output) and interactively.  The latter loads and displays
+# the dir node, but the former does not output the dir node, just an
+# error message.
+
+$GINFO --output - not-a-file 2>&1 | grep 'No menu item'
