@@ -13,4 +13,5 @@ File: dir,	Node: Top	This is the top of the INFO tree
 * Menu:
 
 Test Info files
-* file1: (file1).                 How to use the documentation browsing system.
+* file1: (file1). 
+* file-menu: (file-menu). 
