@@ -1,3 +1,15 @@
+2014-04-27  Gavin Smith  <gavinsmith0123@gmail.com>
+
+	* info/t/dir-to-file.sh, info/t/dir-file.sh: Renamed.
+	* info/t/dir-to-no-file.sh, info/t/dir-no-file.sh: Renamed.
+
+	* info/t/no-file.sh, info/t/dir-nondir.sh, info/t/where-dir-file.sh:
+	New tests.
+
+	* t/infodir/dir: file-menu file listed.
+
+	* info/t/Init-test.inc, info/t/dir-no-file.sh: Comments added.
+
 2014-04-27  Karl Berry  <karl@gnu.org>
 
 	* util/texi2dvi (max_iters): change from -1 to 7.  Infinite
